--- a/src/index.css
+++ b/src/index.css
@@ -959,7 +959,8 @@ header {
     border-radius: 4px;
     margin-bottom: 2.25rem;
     cursor: pointer;
-    max-width: 100% }
+    max-width: 100%;
+    max-height: 500px; }
     @media (max-width: 720px) {
       .card img {
         width: 100%; } }
